hphp/test/quick/parser_massive_add_exp.php.expectf
%|{225000%h{0a}Pass|%?{==[0-9]+==WARNING: ASan is ignoring requested __asan_handle_no_return%s}Fatal error: Expression recursion limit reached in %s/parser_massive_add_exp.php on line 1}
